core(audit wave 1): association navigation, distinct sugar, isMany, loud checks
Module-wide audit (docs/AUDIT_2026_07.md) Wave 1 — correctness holes.
Scoreboard-verified (recorded): 1402 passes; H-bucket 580 -> 541 (the
association fix un-stuck 39 "has no property" tests at TYPE-CHECK; their
execution is gated on Phase H TypedGetAll lowering, so they progressed
into downstream walls rather than passing).

- findProperty's contract THIRD LEG implemented: association-injected
  navigation properties resolve at lookup time (Property doc §5
  discipline 3 promised it; PureModelContext never delivered). Backed by
  an O(1) (ownerFqn -> propName -> end) index on ModelBuilder — user
  review caught that the naive linear scan would sit on the type
  checker's hot path. Pinned both directions with declared mults.
- distinct(~col) desugars to distinct(~[col]) in DistinctChecker — real
  Pure registers ONLY the ColSpecArray overload (verified in real
  checkout); same pattern as SortChecker.ascIfBare. No fake overload.
- ONE Multiplicity.isMany() replacing five divergent copies, with the
  Var decision WRITTEN DOWN: vars are not "many" (checkers see
  unresolved signatures); post-G layers guard with requireBounded() —
  a surviving Var in lowering/exec reports itself as a checker bug.
- Loud sort direction: only ASC/DESC map; anything else throws with the
  enum path (was: silently ascending).
- Multiplicity conformance: NewChecker ([2] into [1] property throws;
  navigate() values exempt — the mapping DSL's static T[*] narrows at
  Phase H), EvalChecker (per-argument), IfChecker (Boolean[1] condition).
- TypedNewInstance keeps property DECLARATION ORDER (Map.copyOf
  randomizes per JVM run — children() was nondeterministic).
- Overload-resolution errors carry the FUNCTION NAME and argument index
  ("in call to 'distinct', argument 2: unknown column ...") — the
  scoreboard detail is now materially more diagnosable.

1244 core tests green (+2 pins: association navigation, dist