@@ -14,7 +14,12 @@ import java.util.Map;
 public record TypedNewInstance(String classFqn, Map<String, TypedSpec> properties,
                                ExprType info) implements TypedSpec {
     public TypedNewInstance {
-        properties = Map.copyOf(properties);
+        // ORDER-PRESERVING copy: Map.copyOf randomizes iteration order per
+        // JVM run, which would make children() — and any lowering emitted
+        // from it — nondeterministic (audit finding). NewChecker builds a
+        // LinkedHashMap in declaration order; keep it.
+        properties = java.util.Collections.unmodifiableMap(
+                new java.util.LinkedHashMap<>(properties));
     }
 
     @Override
